# boltshell

./: .gitignore  Cargo.toml
src/: main.rs  models.rs
src/models/: about.rs  database.rs  home.rs  styles.rs
