[package]
name = "boltshell"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["all_loaders"] }
image = "0.25.8"
rfd = "0.15.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
ssh2 = "0.9.5"
tokio = {version="1.47.1",features = ["full"]}
